fix(Targeting): FIxes a minor issue where very large targets overflow out of the targeting grid.

--- a/src/components/views/Targeting/style.scss
+++ b/src/components/views/Targeting/style.scss
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   .targetArea {
+    overflow: hidden;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
   }
